# ckan-editor-utils

./: .gitignore  LICENSE.txt  README.md  README_DEV.md  pyproject.toml
ckan_editor_utils/: __init__.py  ckan_editor_utils.py
tests/: test_ckan_editor_utils.py
