[tool.poetry]
name = "ckan-editor-utils"
version = "0.1.8"
description = "Utilities for editing CKAN using its API."
authors = ["Eric McCowan <eric.mccowan@servian.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ericmccowan/ckan-editor-utils"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.15.16"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
